Adjust notifier settings a11y texts and focus behavior.

This CL adds a11y attributes to some elements in notifier settings view,
and also changes focus behavior of notifier settings to ACCESSIBLE_ONLY.

By these changes,
- ChromeVox now properly reads the a11y text of do-not-disturb toggle.
- Tab focus goes directly from the settings close button to
  the do-not-disturb toggle button.
- ChromeVox reads the contents of the notifier source list.

TEST=manual
BUG=780747

Change-Id: If2c97d03b160e981e6e6d68037fa4eade08fc5d6
Reviewed-on: https://chromium-review.googlesource.com/754241
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#514184}
Former-commit-id: 13aed090ed75e1ad8a2698d09319c01cced58a84